--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Trivia Game</title>
+	<meta charset="utf-8">
+    	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="quizContainer">
+      <div class="textContainer">
+        <h1>The Baseball Quiz</h1>
+        <h2>Let's Play Ball!</h2>
+          <div class="countdown"></div>
+          <div class="question"></div>
+          <div><ul class="choices"></ul></div>
+          <div class="start"><button id="start">Start</button></div>
+          <div class="message"></div>
+        </div>
+      </div>
+</div>
+<script
+  src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+  integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
+  crossorigin="anonymous"></script>
+<script type="text/javascript" src=assets/javascript/app.js></script>
 </body>
 </html>
